--- a/universal-result.html
+++ b/universal-result.html
@@ -52,7 +52,7 @@
                         </tr>
                     </table>
                     <p class="disclaimer">*Os valores exibidos acima foram coletados pelo nosso sistema no dia <span id="jkl"></span> e horário <span id="mno"></span>. 
-                        Os mesmos estão sujeitos à <br>alterações em decorrência de flutuação cambial. O valor final deverá ser confirmado no site da operadora.</p>
+                        Os mesmos estão sujeitos à alterações em decorrência de flutuação cambial. O valor final deverá ser confirmado no site da operadora.</p>
                 </div>
             </div> 
 
